# self64

./: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake  configureVmDate.cmake  for_copied_frame_callers.dot  includeDB  readme.md
.claude/skills/self-vm/: SKILL.md
Self.app/Contents/: Info.plist
_glue/: Makefile  cmake_install.cmake
docs/handbook/: appendices.rst  build.sh  creatingprimitives.rst  pyproject.toml
incls/: vmDate.cpp
objects/core/: smallInt.self  unix.self
objects/glue/: xft_glue.cpp
objects/ui2/: worldMorph.self
scripts/: cmake-xcode.sh  fix-xcode-paths.py
src/: Makefile  cmake_install.cmake
vm/build_support/: includeDB.in
vm/cmake/: dependencies.cmake  platform.cmake
vm/src/any/fast_compiler/: fscope.cpp
vm/src/any/interpreter/: abstract_interpreter.cpp  abstract_interpreter.hh  abstract_interpreter_inline.hh  interpreter.hh
vm/src/any/lookup/: key.cpp  key.hh  simpleLookup.cpp  simpleLookup.hh
vm/src/any/objects/: memOop.cpp  mirrorOop.hh  oop.cpp  processOop.cpp  vframeOop.cpp
vm/src/any/runtime/: frame.hh  process.hh  vframe.hh
vm/src/unix/prims/: prim_table_os_unix.hh  unixPrims.cpp  unixPrims.hh
vm64/build_support/: includeDB.in
vm64/cmake/: freebsd.cmake  mac_osx.cmake  platform.cmake
vm64/src/: CMakeLists.txt
vm64/src/amd64/runtime/: frame_iterator_amd64.cpp  interruptedCtx_amd64.cpp
vm64/src/any/interpreter/: abstract_interpreter.cpp  abstract_interpreter.hh  interpreter.cpp  interpreter.hh
vm64/src/any/lookup/: key.cpp  key.hh  simpleLookup.cpp
vm64/src/any/memory/: generation.cpp  universe.hh  (+5 more)
(+25 files in other folders)
