[project]
name = "handbook"
version = "2024.1.01"
description = "Handbook for the Self programming language"
authors = [{name = "Russell Allen", email = "mail@russell-allen.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sphinx>=8.0.0",
    "alabaster>=1.0.0",
    "insegel>=1.3.0",
    "furo>=2024",
]
